// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stores a sequence of edits 1`] = `
{
  "period": 3,
  "serial": 3,
  "stack": {
    "edits": [
      {
        "change": [
          [
            1,
            "foo",
          ],
        ],
        "timestamp": "1970-01-01T00:00:01.000Z",
      },
      {
        "change": [
          [
            0,
            3,
          ],
          [
            1,
            "bar",
          ],
        ],
        "timestamp": "1970-01-01T00:00:11.000Z",
      },
      {
        "change": [
          [
            -1,
            3,
          ],
          [
            0,
            3,
          ],
        ],
        "timestamp": "1970-01-01T00:00:21.000Z",
      },
    ],
    "next": null,
    "snapshot": "bar",
  },
}
`;

exports[`stores a sequence of edits onto the next stack 1`] = `
{
  "period": 3,
  "serial": 4,
  "stack": {
    "edits": [
      {
        "change": [
          [
            0,
            3,
          ],
          [
            1,
            "bar",
          ],
        ],
        "timestamp": "1970-01-01T00:00:11.000Z",
      },
      {
        "change": [
          [
            -1,
            3,
          ],
          [
            0,
            3,
          ],
        ],
        "timestamp": "1970-01-01T00:00:21.000Z",
      },
      {
        "change": [
          [
            0,
            3,
          ],
          [
            1,
            "baz",
          ],
        ],
        "timestamp": "1970-01-01T00:00:31.000Z",
      },
    ],
    "next": {
      "edits": [
        null,
        null,
        {
          "change": [
            [
              1,
              "bar",
            ],
          ],
          "timestamp": "1970-01-01T00:00:31.000Z",
        },
      ],
      "next": null,
      "snapshot": "bar",
    },
    "snapshot": "barbaz",
  },
}
`;

exports[`stores a sequence of edits onto the third stack 1`] = `
{
  "period": 3,
  "serial": 10,
  "stack": {
    "edits": [
      {
        "change": [
          [
            0,
            7,
          ],
          [
            1,
            "h",
          ],
        ],
        "timestamp": "1970-01-01T00:01:11.000Z",
      },
      {
        "change": [
          [
            0,
            8,
          ],
          [
            1,
            "i",
          ],
        ],
        "timestamp": "1970-01-01T00:01:21.000Z",
      },
      {
        "change": [
          [
            0,
            9,
          ],
          [
            1,
            "j",
          ],
        ],
        "timestamp": "1970-01-01T00:01:31.000Z",
      },
    ],
    "next": {
      "edits": [
        {
          "change": [
            [
              1,
              "abc",
            ],
          ],
          "timestamp": "1970-01-01T00:00:31.000Z",
        },
        {
          "change": [
            [
              0,
              3,
            ],
            [
              1,
              "def",
            ],
          ],
          "timestamp": "1970-01-01T00:01:01.000Z",
        },
        {
          "change": [
            [
              0,
              6,
            ],
            [
              1,
              "ghi",
            ],
          ],
          "timestamp": "1970-01-01T00:01:31.000Z",
        },
      ],
      "next": null,
      "snapshot": "abcdefghi",
    },
    "snapshot": "abcdefghij",
  },
}
`;
